Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/fields/dca_cnvrt_file__Original_Record_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_file__Original_Record_Owner_ID__c</fullName>
    <description>The owner ID of the original Note or Attachment that was converted.</description>
    <externalId>true</externalId>
    <inlineHelpText>The owner ID of the original Note or Attachment that was converted.</inlineHelpText>
    <label>Original Record Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>