Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/fields/dca_cnvrt_note__Original_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_note__Original_Record_ID__c</fullName>
    <description>The original Note or Attachment ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
    <externalId>true</externalId>
    <inlineHelpText>The original Note or Attachment ID this ContentVersion was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
    <label>Original Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>