Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/fields/External_Approved__c.field-meta.xml
<CustomField>
    <fullName>External_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External-Approved</label>
    <type>Checkbox</type>
</CustomField>