Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Content</relationshipLabel>
    <relationshipName>Content</relationshipName>
    <type>Lookup</type>
</CustomField>