Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>