Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/recordTypes/MarketingDocument.recordType-meta.xml
<RecordType>
    <fullName>MarketingDocument</fullName>
    <active>true</active>
    <label>Marketing Document</label>
</RecordType>