Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/recordTypes/SalesAsset.recordType-meta.xml
<RecordType>
    <fullName>SalesAsset</fullName>
    <active>true</active>
    <label>Sales Asset</label>
</RecordType>