Reetan.Nayak Dev 25/force-app/main/default/objects/ContentVersion/recordTypes/SupportDocument.recordType-meta.xml
<RecordType>
    <fullName>SupportDocument</fullName>
    <active>true</active>
    <label>Support Document</label>
</RecordType>